# proyecto-datos-masivos

./: .gitignore  eda.py  main.py  pyproject.toml  run.sh
eda/: .gitignore  README.md  eda.py  justfile  pyproject.toml
function/: .gitignore  README.md  justfile  main.py  pyproject.toml
