[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alejandro Osornio", email = "aoxo.contact@gmail.com" }
]
dependencies = [
    "google>=3.0.0",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-bigquery-storage>=2.27.0",
    "polars>=1.16.0",
    "vegafusion[embed]>=2.0.1",
    "vl-convert-python>=1.7.0",
    "ipykernel>=6.29.5",
    "altair>=5.5.0",
    "pyarrow>=18.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
gen = "jupytext --to ipynb --from py:percent eda.py"
