[project]
name = "function"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Alejandro Osornio", email = "aoxo.contact@gmail.com" }]
dependencies = [
    "functions-framework>=3.8.2",
    "polars>=1.16.0",
    "cloudevents>=1.11.0",
    "google>=3.0.0",
    "google-cloud-bigquery>=3.27.0",
    "arrow>=1.3.0",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
gen = "just gen"
run-local = "just run-local"
